@@ -2,13 +2,11 @@ package com.aircraftcarrier.framework.excel;
 
 import com.aircraftcarrier.framework.excel.util.ExcelRow;
 import com.aircraftcarrier.framework.model.BatchResult;
-import com.aircraftcarrier.framework.tookit.MapUtil;
+import com.aircraftcarrier.framework.tookit.PredicateUtil;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * @author lzp
@@ -51,16 +49,16 @@ public abstract class AbstractImportUploadWorker<T extends ExcelRow> extends Abs
      */
     @Override
     protected List<T> filter(List<T> rowList) {
-        Map<String, Integer> seen = MapUtil.newHashMap(rowList.size());
-        return rowList.stream().filter(row -> {
-            Integer oldRowNo = seen.putIfAbsent(row.genUniqueKey(), row.getRowNo());
-            if (oldRowNo == null) {
-                return true;
-            }
-            batchResult.addErrorMsg(row.getRowNo(), "与第[" + oldRowNo + "]行数据重复");
-            return false;
-        }).collect(Collectors.toList());
-//        return rowList.stream().filter(PredicateUtil.distinctByKey(T::genUniqueKey, rowList.size())).collect(Collectors.toList());
+//        Map<String, Integer> seen = MapUtil.newHashMap(rowList.size());
+//        return rowList.stream().filter(row -> {
+//            Integer oldRowNo = seen.putIfAbsent(row.genUniqueKey(), row.getRowNo());
+//            if (oldRowNo == null) {
+//                return true;
+//            }
+//            batchResult.addErrorMsg(row.getRowNo(), "与第[" + oldRowNo + "]行数据重复");
+//            return false;
+//        }).collect(Collectors.toList());
+        return rowList.stream().filter(PredicateUtil.distinctByKey(T::genUniqueKey, rowList.size())).toList();
     }
 
     /**
@@ -104,11 +102,6 @@ public abstract class AbstractImportUploadWorker<T extends ExcelRow> extends Abs
     }
 
     @Override
-    protected void doBatchInvoke(List<T> rowList) {
-        log.debug("doBatchInvoke - rowList - size: {}", rowList.size());
-    }
-
-    @Override
     protected void afterProcess(List<T> rowList) {
         log.debug("afterProcess...");
     }
@@ -145,7 +138,7 @@ public abstract class AbstractImportUploadWorker<T extends ExcelRow> extends Abs
      *
      * @param <T>
      */
-    public static class ImportUploadWorkerBuilder<T extends ExcelRow> {
+    public static final class ImportUploadWorkerBuilder<T extends ExcelRow> {
 
         /**
          * worker
@@ -167,7 +160,7 @@ public abstract class AbstractImportUploadWorker<T extends ExcelRow> extends Abs
          */
         private List<T> rowList = new ArrayList<>();
 
-        ImportUploadWorkerBuilder(AbstractImportUploadWorker<T> worker) {
+        private ImportUploadWorkerBuilder(AbstractImportUploadWorker<T> worker) {
             this.worker = worker;
         }
 
